test/sema/typeck/trait/static-method-call-invalid-type-param-2.out
error: type `Int64` does not implement trait `Bar`.
--> static-method-call-invalid-type-param-2.dora:14:5
 | 
 | fn f[T: Foo](x: T) {
 |     T::bar[Int](1);
       ~~~~~~~~~~~~~~
 | }
 | 
1 error found.
