test/sema/typeck/trait/static-method-call-invalid-type-param-2.dora
trait Foo {
    static fn bar[T: Bar[X=Int]](x: T);
}

trait Bar {
    type X;
}

impl Bar for Int {
    type X = String;
}

fn f[T: Foo](x: T) {
    T::bar[Int](1);
}
